style: fix color contrast.

--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ section {
 }
 
 #footer {
-  background-color: #444;
+  background-color: #2B2B2B;
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
@@ -137,7 +137,7 @@ nav h1 a {
 /* Add a color to all links inside the list */
 
 #breadcrumb li a {
-  color: #0275d8;
+  color: #0052B5;
   text-decoration: none;
 }
 
@@ -161,7 +161,7 @@ nav h1 a {
 .filter-options {
   width: 100%;
   height: 100px;
-  background-color: #3397DB;
+  background-color:#1579BD;
   align-items: center;
 }
 
@@ -219,7 +219,7 @@ nav h1 a {
 }
 
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #CD3510;
   font-family: Arial, sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -235,7 +235,7 @@ nav h1 a {
 }
 
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #CD3510;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -302,7 +302,7 @@ nav h1 a {
 }
 
 #restaurant-name {
-  color: #f18200;
+  color: #CD3510;;
   font-family: Arial, sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -347,7 +347,7 @@ nav h1 a {
 }
 */
 #reviews-container h2 {
-  color: #f58500;
+  color: #CD3510;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
